# CampoTech

./: .gitattributes  .gitignore  .pnpmfile.cjs  ARCHITECTURE-AUDIT-REPORT.md  AUDIT-INVENTORY-ZONES-V2.md  CAMPOTECH-TYPESCRIPT-FIX-472.xml  CAMPOTECH-TYPESCRIPT-FIX-625.xml  CODE_QUALITY_REFERENCE.md  COMPLETE_QUALITY_REPORT.md  Errors to fix  GEMINI.md  PHASES-1-8-IMPLEMENTATION-REVIEW.md  PHASES-9.5-9.11-AUDIT-REPORT.md  PROMPT-INVENTORY-MODULE-COMPLETE.md  PROMPT-WHATSAPP-INTEGRATION-COMPLETE.md  README.md  WHATSAPP-INTEGRATION-COMPLETE.md  convert-vitest-to-jest.ps1  fix-encoding.js  fix-encoding.ps1  fix-syntax-errors.ps1  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  quality-check.ps1  test-output-after-batch-fix.txt  test-output-after-fixes.txt  test-output-final.txt  test-output-full.txt  vercel.json
services/ai/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  railway.toml  render.yaml  requirements-simple.txt  requirements.txt  setup.bat
services/ai/app/: __init__.py  config.py
services/ai/app/api/: __init__.py  invoice.py  support.py  voice.py
services/ai/app/integrations/: __init__.py  openai_client.py  postgres.py  whatsapp.py
services/ai/app/middleware/: __init__.py  auth.py  monitoring.py
services/ai/app/models/: __init__.py  invoice_extraction.py  schemas.py
services/ai/app/services/: __init__.py  invoice_extraction.py  translation.py
services/ai/app/workflows/: __init__.py  support_bot.py  (+1 more)
services/ai/tests/: __init__.py  test_api.py  test_voice_workflow.py
src/lib/: db.ts  (+6 more)
(+2285 files in other folders)
